--- a/debian/po/de.po
+++ b/debian/po/de.po
@@ -1,15 +1,15 @@
 # Translation of GRUB 2 debconf templates to German
-# Copyright (C) Helge Kreutzmann <debian@helgefjell.de>, 2007-2009, 2017.
+# Copyright (C) Helge Kreutzmann <debian@helgefjell.de>, 2007-2009, 2017, 2023.
 #               Martin Eberhard Schauer <Martin.E.Schauer@gmx.de>,
 #               2010, 2011, 2014.
 # This file is distributed under the same license as the grub2 package.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: 2.02~beta3-4\n"
+"Project-Id-Version: 2.02 2.06-13\n"
 "Report-Msgid-Bugs-To: grub2@packages.debian.org\n"
-"POT-Creation-Date: 2019-02-26 09:54+0000\n"
-"PO-Revision-Date: 2019-01-31 18:13+0100\n"
+"POT-Creation-Date: 2023-04-23 20:27+0000\n"
+"PO-Revision-Date: 2023-04-25 19:48+0200\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: German <debian-l10n-german@lists.debian.org>\n"
 "Language: de\n"
@@ -394,15 +394,50 @@ msgstr ""
 "einem PXE-Server Kontakt aufnimmt, dann würde dies dieses Verhalten "
 "beibehalten."
 
-#. Type: string
+#. Type: boolean
 #. Description
 #: ../templates.in:5001
+msgid "Run os-prober automatically to detect and boot other OSes?"
+msgstr ""
+"Automatisch os-prober ausführen, um andere Betriebssysteme zu erkennen und "
+"zu starten?"
+
+#. Type: boolean
+#. Description
+#: ../templates.in:5001
+msgid ""
+"GRUB can use the os-prober tool to attempt to detect other operating systems "
+"on your computer and add them to its list of boot options automatically."
+msgstr ""
+"GRUB kann das Werkzeug os-prober verwenden, um das Erkennen anderer "
+"Betriebssystem auf Ihrem Computer zu versuchen und sie automatisch zu der "
+"Liste der Startoptionen hinzuzufügen."
+
+#. Type: boolean
+#. Description
+#: ../templates.in:5001
+msgid ""
+"If your computer has multiple operating systems installed, then this is "
+"probably what you want. However, if your computer is a host for guest OSes "
+"installed via LVM or raw disk devices, running os-prober can cause damage to "
+"those guest OSes as it mounts filesystems to look for things."
+msgstr ""
+"Falls auf Ihrem Computer mehrere Betriebssystem installiert sind, dann "
+"möchten Sie das wahrscheinlich. Falls Ihr Computer als Betreiber für "
+"Gastbetriebssysteme dient, die mittels LVM oder rohen Plattengeräten "
+"installiert sind, dann kann die Ausführung von os-prober diese "
+"Gastbetriebssysteme beschädigen, da es Dateisysteme einhängt, um nach "
+"bestimmten Sachen zu suchen."
+
+#. Type: string
+#. Description
+#: ../templates.in:6001
 msgid "kFreeBSD command line:"
 msgstr "Befehlszeile für kFreeBSD:"
 
 #. Type: string
 #. Description
-#: ../templates.in:5001
+#: ../templates.in:6001
 msgid ""
 "The following kFreeBSD command line was extracted from /etc/default/grub or "
 "the `kopt' parameter in GRUB Legacy's menu.lst. Please verify that it is "
@@ -415,13 +450,13 @@ msgstr ""
 
 #. Type: string
 #. Description
-#: ../templates.in:6001
+#: ../templates.in:7001
 msgid "kFreeBSD default command line:"
 msgstr "Standard-Befehlszeile für kFreeBSD:"
 
 #. Type: string
 #. Description
-#: ../templates.in:6001
+#: ../templates.in:7001
 msgid ""
 "The following string will be used as kFreeBSD parameters for the default "
 "menu entry but not for the recovery mode."
