--- a/debian/po/kk.po
+++ b/debian/po/kk.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: master\n"
 "Report-Msgid-Bugs-To: grub2@packages.debian.org\n"
-"POT-Creation-Date: 2019-02-26 09:54+0000\n"
-"PO-Revision-Date: 2017-01-20 08:44+0500\n"
+"POT-Creation-Date: 2023-04-23 20:27+0000\n"
+"PO-Revision-Date: 2023-04-25 21:51+0600\n"
 "Last-Translator: Baurzhan Muftakhidinov <baurthefirst@gmail.com>\n"
 "Language-Team: Kazakh <kk_KZ@googlegroups.com>\n"
 "Language: kk\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Poedit 1.8.11\n"
+"X-Generator: Poedit 3.2.2\n"
 
 #. Type: boolean
 #. Description
@@ -93,7 +93,7 @@ msgid ""
 "modules or grub.cfg."
 msgstr ""
 "grub-install автожөнелту көп жағдайда ұсынылады, орнатылған GRUB өзегі және "
-"модульдер не grub.cfg-мен үйлесімді болуы үшін."
+"модульдер немесе grub.cfg-мен үйлесімді болуы үшін."
 
 #. Type: multiselect
 #. Description
@@ -373,15 +373,48 @@ msgstr ""
 "жүйеңіз әр жүктелген кезде PXE серверімен байланысатындай бапталған болса, "
 "онда осындай әрекет сақталады."
 
-#. Type: string
+#. Type: boolean
 #. Description
 #: ../templates.in:5001
+msgid "Run os-prober automatically to detect and boot other OSes?"
+msgstr ""
+"Басқа ОЖ анықтау және жүктеу үшін os-prober автоматты түрде жөнелту керек пе?"
+
+#. Type: boolean
+#. Description
+#: ../templates.in:5001
+msgid ""
+"GRUB can use the os-prober tool to attempt to detect other operating systems "
+"on your computer and add them to its list of boot options automatically."
+msgstr ""
+"GRUB компьютеріңіздегі басқа операциялық жүйелерді анықтау үшін os-prober "
+"құралын пайдалана алады және оларды автоматты түрде жүктеу нұсқаларының "
+"тізіміне қоса алады."
+
+#. Type: boolean
+#. Description
+#: ../templates.in:5001
+msgid ""
+"If your computer has multiple operating systems installed, then this is "
+"probably what you want. However, if your computer is a host for guest OSes "
+"installed via LVM or raw disk devices, running os-prober can cause damage to "
+"those guest OSes as it mounts filesystems to look for things."
+msgstr ""
+"Егер компьютеріңізде бірнеше операциялық жүйелер орнатылған болса, онда бұл "
+"қалағаныңыз шығар. Дегенмен, егер компьютеріңіз LVM немесе шикі дискілік "
+"құрылғылар арқылы орнатылған қонақ осьтеріне арналған хост болса, os-prober "
+"іздеу кезінде файлдар жүйелерін тіркейтін соң сол қонақ ОС-ге зиян келтіруі "
+"мүмкін."
+
+#. Type: string
+#. Description
+#: ../templates.in:6001
 msgid "kFreeBSD command line:"
 msgstr "kFreeBSD командалық жолы:"
 
 #. Type: string
 #. Description
-#: ../templates.in:5001
+#: ../templates.in:6001
 msgid ""
 "The following kFreeBSD command line was extracted from /etc/default/grub or "
 "the `kopt' parameter in GRUB Legacy's menu.lst. Please verify that it is "
@@ -393,13 +426,13 @@ msgstr ""
 
 #. Type: string
 #. Description
-#: ../templates.in:6001
+#: ../templates.in:7001
 msgid "kFreeBSD default command line:"
 msgstr "kFreeBSD бастапқы командалық жолы:"
 
 #. Type: string
 #. Description
-#: ../templates.in:6001
+#: ../templates.in:7001
 msgid ""
 "The following string will be used as kFreeBSD parameters for the default "
 "menu entry but not for the recovery mode."
