--- a/debian/po/lv.po
+++ b/debian/po/lv.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: grub2@packages.debian.org\n"
-"POT-Creation-Date: 2019-02-26 09:54+0000\n"
-"PO-Revision-Date: 2015-02-10 21:14+0200\n"
+"POT-Creation-Date: 2023-04-23 20:27+0000\n"
+"PO-Revision-Date: 2023-04-30 22:01+0300\n"
 "Last-Translator: Rūdolfs Mazurs <rudolfs.mazurs@gmail.com>\n"
 "Language-Team: Latvian <lata-l10n@googlegroups.com>\n"
 "Language: lv\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n != 0 ? 1 : "
 "2);\n"
-"X-Generator: Lokalize 1.5\n"
+"X-Generator: Poedit 3.2.2\n"
 
 #. Type: boolean
 #. Description
@@ -359,7 +359,7 @@ msgstr ""
 #. Description
 #: ../templates.in:4001
 msgid "Update NVRAM variables to automatically boot into Debian?"
-msgstr ""
+msgstr "Atjaunināt NVRAM mainīgos, lai automātiski ielādētu Debian?"
 
 #. Type: boolean
 #. Description
@@ -371,16 +371,55 @@ msgid ""
 "your NVRAM variables have been set up such that your system contacts a PXE "
 "server on every boot, this would preserve that behavior."
 msgstr ""
+"GRUB var konfigurēt jūsu platformas NVRAM mainīgos, lai pēc sistēmas "
+"ieslēgšanas ielādētu Debian. Jūs varētu vēlēties izslēgt šo uzvedību, lai "
+"nemainītu ielādes konfigurāciju. Piemēram, ja jūsu NVRAM mainīgie ir "
+"iestatīti tā, ka pie katras ielādes sistēma sazinās ar PXE serveri, šis "
+"iestatījums saglabātu tādu uzvedību."
+
+#. Type: boolean
+#. Description
+#: ../templates.in:5001
+msgid "Run os-prober automatically to detect and boot other OSes?"
+msgstr ""
+"Automātiski palaist operētājsistēmu meklētāju, lai atklātu un ielādētu citas "
+"OS?"
+
+#. Type: boolean
+#. Description
+#: ../templates.in:5001
+msgid ""
+"GRUB can use the os-prober tool to attempt to detect other operating systems "
+"on your computer and add them to its list of boot options automatically."
+msgstr ""
+"GRUB var izmantot operētājsistēmu meklēšanas rīku, lai uz jūsu datora "
+"mēģinātu atklāt citas operētājsistēmas un automātiski pievienot tās pie "
+"ielādes opcijām."
+
+#. Type: boolean
+#. Description
+#: ../templates.in:5001
+msgid ""
+"If your computer has multiple operating systems installed, then this is "
+"probably what you want. However, if your computer is a host for guest OSes "
+"installed via LVM or raw disk devices, running os-prober can cause damage to "
+"those guest OSes as it mounts filesystems to look for things."
+msgstr ""
+"Ja uz jūsu datora ir uzinstalētas vairākas operētājsistēmas, jūs visdrīzāk "
+"gribat šo opciju. Savukārt, ja jūsu dators ir saimnieks viesa "
+"operētājsistēmai, kas ir uzinstalēts caur LVM vai diska ierīci, tad "
+"operētājsistēmu meklētājs var sabojāt tās OS, jo, lai varētu meklēt, tas "
+"montē datņu sistēmas."
 
 #. Type: string
 #. Description
-#: ../templates.in:5001
+#: ../templates.in:6001
 msgid "kFreeBSD command line:"
 msgstr "kFreeBSD komandrinda:"
 
 #. Type: string
 #. Description
-#: ../templates.in:5001
+#: ../templates.in:6001
 msgid ""
 "The following kFreeBSD command line was extracted from /etc/default/grub or "
 "the `kopt' parameter in GRUB Legacy's menu.lst. Please verify that it is "
@@ -392,13 +431,13 @@ msgstr ""
 
 #. Type: string
 #. Description
-#: ../templates.in:6001
+#: ../templates.in:7001
 msgid "kFreeBSD default command line:"
 msgstr "kFreeBSD noklusējuma komandrinda:"
 
 #. Type: string
 #. Description
-#: ../templates.in:6001
+#: ../templates.in:7001
 msgid ""
 "The following string will be used as kFreeBSD parameters for the default "
 "menu entry but not for the recovery mode."
