--- a/debian/po/ko.po
+++ b/debian/po/ko.po
@@ -1,11 +1,11 @@
-# Changwoo Ryu <cwryu@debian.org>, 2014, 2017.
+# Changwoo Ryu <cwryu@debian.org>, 2014, 2017, 2023.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: grub_debian\n"
 "Report-Msgid-Bugs-To: grub2@packages.debian.org\n"
-"POT-Creation-Date: 2019-02-26 09:54+0000\n"
-"PO-Revision-Date: 2017-01-21 17:41+0900\n"
+"POT-Creation-Date: 2023-04-23 20:27+0000\n"
+"PO-Revision-Date: 2023-04-26 18:55+0900\n"
 "Last-Translator: Changwoo Ryu <cwryu@debian.org>\n"
 "Language-Team: Korean <debian-l10n-korean@lists.debian.org>\n"
 "Language: ko\n"
@@ -364,15 +364,45 @@ msgstr ""
 "지 않을 수도 있습니다. 예를 들어 부팅할 때마다 PXE 서버에 연결하도록 NVRAM 변"
 "수가 설정되어 있고, 이 기능을 사용하지 않으면 계속 그렇게 동작할 것입니다."
 
-#. Type: string
+#. Type: boolean
 #. Description
 #: ../templates.in:5001
+msgid "Run os-prober automatically to detect and boot other OSes?"
+msgstr "os-prober를 실행해 자동으로 다른 OS를 검색하고 부팅할까요?"
+
+#. Type: boolean
+#. Description
+#: ../templates.in:5001
+msgid ""
+"GRUB can use the os-prober tool to attempt to detect other operating systems "
+"on your computer and add them to its list of boot options automatically."
+msgstr ""
+"GRUB에서 os-prober 도구를 사용해 컴퓨터의 다른 운영 체제를 검색하고, 검색된 "
+"운영 체제를 부팅 옵션 목록에 자동으로 추가할 수 있습니다."
+
+#. Type: boolean
+#. Description
+#: ../templates.in:5001
+msgid ""
+"If your computer has multiple operating systems installed, then this is "
+"probably what you want. However, if your computer is a host for guest OSes "
+"installed via LVM or raw disk devices, running os-prober can cause damage to "
+"those guest OSes as it mounts filesystems to look for things."
+msgstr ""
+"컴퓨터에 운영 체제가 여러 개 설치된 경우라면, 이 기능을 사용하는 게 좋을 겁니"
+"다. 하지만 컴퓨터가 LVM을 통해 또는 디스크 장치에 직접 게스트 운영 체제가 설"
+"치되어 있는 호스트 컴퓨터라면, os-prober를 실행하면 os-prober에서 파일 시스템"
+"을 마운트해서 검색하기 때문에 이 게스트 운영 체제가 손상될 수 있습니다."
+
+#. Type: string
+#. Description
+#: ../templates.in:6001
 msgid "kFreeBSD command line:"
 msgstr "kFreeBSD 명령어:"
 
 #. Type: string
 #. Description
-#: ../templates.in:5001
+#: ../templates.in:6001
 msgid ""
 "The following kFreeBSD command line was extracted from /etc/default/grub or "
 "the `kopt' parameter in GRUB Legacy's menu.lst. Please verify that it is "
@@ -384,13 +414,13 @@ msgstr ""
 
 #. Type: string
 #. Description
-#: ../templates.in:6001
+#: ../templates.in:7001
 msgid "kFreeBSD default command line:"
 msgstr "kFreeBSD 기본 명령어:"
 
 #. Type: string
 #. Description
-#: ../templates.in:6001
+#: ../templates.in:7001
 msgid ""
 "The following string will be used as kFreeBSD parameters for the default "
 "menu entry but not for the recovery mode."
