--- a/debian/po/tr.po
+++ b/debian/po/tr.po
@@ -1,22 +1,22 @@
-# Turkish messages for debian-installer.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the debian-installer package.
-# Atila KOÇ <koc@artielektronik.com.tr>, 2012, 2014.
+# Turkish debconf translation of grub2
+# This file is distributed under the same license as the grub2 package.
+# Mert Dirik <mertdirik@gmail.com>, 2017.
+# Atila KOÇ <koc@artielektronik.com.tr>, 2012, 2014, 2023.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: debian-installer\n"
+"Project-Id-Version: grub2\n"
 "Report-Msgid-Bugs-To: grub2@packages.debian.org\n"
-"POT-Creation-Date: 2019-02-26 09:54+0000\n"
-"PO-Revision-Date: 2017-01-20 15:18+0300\n"
-"Last-Translator: Mert Dirik <mertdirik@gmail.com>\n"
+"POT-Creation-Date: 2023-04-21 15:46+0000\n"
+"PO-Revision-Date: 2023-04-30 15:12+0300\n"
+"Last-Translator: Atila KOÇ <koc@artielektronik.com.tr>\n"
 "Language-Team: Debian L10n Turkish <debian-l10n-turkish@lists.debian.org>\n"
 "Language: tr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Poedit 1.8.7.1\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. Type: boolean
 #. Description
@@ -29,7 +29,8 @@ msgstr "menu.lst dosyasından zincirleme yükleme yapılsın mı?"
 #: ../grub-pc.templates.in:2001
 msgid "GRUB upgrade scripts have detected a GRUB Legacy setup in /boot/grub."
 msgstr ""
-"GRUB yükseltme betikleri /boot/grub altında eski bir GRUB kurulumu algıladı."
+"GRUB yükseltme betikleri /boot/grub altında bir GRUB Legacy kurulumu "
+"algıladı."
 
 #. Type: boolean
 #. Description
@@ -40,10 +41,10 @@ msgid ""
 "from your existing GRUB Legacy setup. This step can be automatically "
 "performed now."
 msgstr ""
-"Sisteminizdeki eski sürüm GRUB kurulumunu değiştirmek için, /boot/grub/menu."
-"lst dosyasının bir GRUB 2 önyükleme görüntüsünü var olan eski GRUB "
-"kurulumundan yüklenmesine olanak tanıyacak şekilde değiştirilmesi "
-"gerekmektedir. Bu adım şimdi otomatik olarak gerçekleştirilebilir."
+"Sisteminizdeki GRUB'un Legacy sürümünü değiştirmek için, /boot/grub/menu.lst "
+"dosyasının bir GRUB 2 önyükleme görüntüsünü var olan GRUB Legacy "
+"kurulumundan yüklenmesine olanak tanıyacak şekilde değiştirilmesi önerilir. "
+"Bu adım şimdi otomatikman gerçekleştirilebilir."
 
 #. Type: boolean
 #. Description
@@ -53,9 +54,9 @@ msgid ""
 "verify that the new GRUB 2 setup works before it is written to the MBR "
 "(Master Boot Record)."
 msgstr ""
-"Yeni GRUB 2 kurulumu Ana Önyükleme Kaydı'na (MBR) yazılmadan önce GRUB 2'nin "
-"menu.lst'den zincirleme önyüklemesini kabul etmeniz ve GRUB 2 kurulumunun "
-"çalıştığını doğrulamanız önerilir."
+"Ana Önyükleme Kaydı'na (MBR) yazılmadan önce GRUB 2'nin menu.lst'den "
+"zincirleme önyüklemesini kabul etmeniz ve GRUB 2 kurulumunun çalıştığını "
+"doğrulamanız önerilir."
 
 #. Type: boolean
 #. Description
@@ -73,7 +74,7 @@ msgstr ""
 #. Description
 #: ../grub-pc.templates.in:3001 ../grub-pc.templates.in:4001
 msgid "GRUB install devices:"
-msgstr "GRUB kurulum aygıtları:"
+msgstr "GRUB kurulacak aygıtlar:"
 
 #. Type: multiselect
 #. Description
@@ -82,8 +83,8 @@ msgid ""
 "The grub-pc package is being upgraded. This menu allows you to select which "
 "devices you'd like grub-install to be automatically run for, if any."
 msgstr ""
-"grub-pc paketi yükseltiliyor. Bu menü, eğer varsa, grub-install komutunun "
-"hangi aygıtlar için otomatik olarak çalıştırılacağını seçmenize olanak tanır."
+"grub-pc paketi yükseltiliyor. Bu menü grub-install komutunun, eğer varsalar, "
+"hangi aygıtlar için otomatikman çalıştırılacağını seçmenize olanak tanır."
 
 #. Type: multiselect
 #. Description
@@ -95,7 +96,7 @@ msgid ""
 msgstr ""
 "Sistemde kurulu olan GRUB çekirdek görüntüsünün GRUB modülleri veya grub.cfg "
 "ile uyumunun bozulmasını engellemek için, çoğu durumda grub-install "
-"komutunun otomatik olarak çalıştırılması önerilir."
+"komutunun otomatikman çalıştırılması önerilir."
 
 #. Type: multiselect
 #. Description
@@ -107,8 +108,7 @@ msgid ""
 "often a good idea to install GRUB to all of them."
 msgstr ""
 "Eğer hangi sürücünün BIOS tarafından önyükleme sürücüsü olarak "
-"belirlendiğinden emin değilseniz, GRUB'u tüm sürücülere kurmak yerinde "
-"olacaktır."
+"belirlendiğinden emin değilseniz, GRUB'u tümüne kurmak yerinde olacaktır."
 
 #. Type: multiselect
 #. Description
@@ -121,10 +121,10 @@ msgid ""
 "use the blocklist mechanism, which makes it less reliable, and therefore is "
 "not recommended."
 msgstr ""
-"Not: GRUB'u disk bölümlerinin önyükleme kayıtlarına kurmak da olanak "
-"dahilindedir ve duruma uygun bazı bölümler burada listelenmiştir. Öte "
-"yandan, bu seçim GRUB'u daha az güvenilir kılan engelleme listesi "
-"(blocklist) mekanizmasını kullanmaya zorlayacağından önerilmemektedir."
+"Not: GRUB'u disk bölümlerinin önyükleme kayıtlarına kurmak da mümkündür ve "
+"buna uygun bazı bölümler burada listelenmiştir. Öte yandan, bu seçim GRUB'u "
+"daha az güvenilir kılan engelleme listesi (blocklist) mekanizmasını "
+"kullanmaya zorlayacağından, önerilmemektedir."
 
 #. Type: multiselect
 #. Description
@@ -137,10 +137,10 @@ msgid ""
 "written to the appropriate boot devices."
 msgstr ""
 "GRUB önyükleyici şu anda var olmayan ya da benzersiz tanımlayıcısı bir "
-"şekilde değişmiş olan bir diske kurulmuş durumda. Kurulu olan GRUB çekirdek "
+"şekilde değişmiş olan bir diske kurulmuş. Kurulu olan GRUB çekirdek "
 "görüntüsünün GRUB modülleri ve grub.cfg ile uyum içinde olduğundan emin "
 "olmak önemlidir. Bu nedenle GRUB'un doğru önyükleme aygıtlarına yazılmış "
-"olduğundan emin olun."
+"olduğunu yeniden kontrol edin."
 
 #. Type: text
 #. Description
@@ -155,15 +155,14 @@ msgstr "${DEVICE} (${SIZE} MB; ${MODEL})"
 #. The "-" is used to indicate indentation. Leading spaces may not work.
 #: ../grub-pc.templates.in:6001
 msgid "- ${DEVICE} (${SIZE} MB; ${PATH})"
-msgstr "- ${DEVICE} (${SIZE} MB; ${PATH})"
+msgstr "${DEVICE} (${SIZE} MB; ${PATH})"
 
 #. Type: boolean
 #. Description
 #: ../grub-pc.templates.in:7001
 msgid "Writing GRUB to boot device failed - continue?"
 msgstr ""
-"GRUB'u önyükleme aygıtına yazma işlemi başarısız oldu. Yine de devam edilsin "
-"mi?"
+"GRUB'u önyükleme aygıtına yazma işlemi başarısız oldu, devam edilsin mi?"
 
 #. Type: boolean
 #. Description
@@ -180,7 +179,7 @@ msgid ""
 "Do you want to continue anyway? If you do, your computer may not start up "
 "properly."
 msgstr ""
-"Yine de devam edilsin mi? Devam edilirse bilgisayarınız düzgün "
+"Yine de devam edilsin mi? Devam ederseniz bilgisayarınız düzgün "
 "başlayamayabilir."
 
 #. Type: boolean
@@ -188,7 +187,7 @@ msgstr ""
 #: ../grub-pc.templates.in:8001
 msgid "Writing GRUB to boot device failed - try again?"
 msgstr ""
-"GRUB'u önyükleme aygıtına yazma işlemi başarısız oldu. Tekrar denensin mi?"
+"GRUB'u önyükleme aygıtına yazma işlemi başarısız oldu, yeniden denensin mi?"
 
 #. Type: boolean
 #. Description
@@ -199,8 +198,8 @@ msgid ""
 "from GRUB Legacy will be canceled."
 msgstr ""
 "GRUB'u başka bir aygıta kurabilirsiniz, ancak sisteminizin o aygıttan "
-"başlatılabileceğinden emin olmalısınız. Aksi durumda, eski GRUB'dan "
-"yükseltme yapılmayacaktır."
+"başlatılabileceğinden emin olmalısınız. Tersi durumda, GRUB Legacy'den "
+"yükseltme iptal edilecektir."
 
 #. Type: boolean
 #. Description
@@ -221,7 +220,7 @@ msgstr ""
 "GRUB'u hiçbir aygıta kurmamayı seçtiniz. Devam ederseniz önyükleyici düzgün "
 "yapılandırılmayabilir ve bu bilgisayar bir sonraki açılışında önyükleme "
 "sektöründe daha önceden bulunan kayıtları kullanır. Eğer önyükleme "
-"sektöründe GRUB 2'nin eski bir sürümü varsa, mevcut yapılandırma dosyasını "
+"sektöründe GRUB 2'nin eski bir sürümü varsa, güncel yapılandırma dosyasını "
 "kullanamayabilir veya modülleri yükleyemeyebilir."
 
 #. Type: boolean
@@ -233,10 +232,9 @@ msgid ""
 "then you should continue anyway. Otherwise, you should install GRUB "
 "somewhere."
 msgstr ""
-"Şu anda başka bir önyükleyici kullanıyorsanız ve kullanmaya devam "
-"edecekseniz; ya da bu sizin bir önyükleyiciye gerek duymadığınız özel bir "
-"ortam ise, bu şekilde devam edebilirsiniz. Aksi durumda GRUB'u bir yere "
-"kurmanız gerekmektedir."
+"Şu anda farklı bir önyükleyici kullanıyorsanız ve kullanmayı sürdürecekseniz "
+"ya da bu sizin bir önyükleyiciye gerek duymadığınız özel bir ortam ise, bu "
+"şekilde devam edebilirsiniz. Tersi durumda GRUB'u bir yere kurmalısınız."
 
 #. Type: boolean
 #. Description
@@ -273,8 +271,8 @@ msgid ""
 "This system still has files from the GRUB Legacy boot loader installed, but "
 "it now also has GRUB 2 boot records installed on these disks:"
 msgstr ""
-"Bu sistemde eski GRUB kurulumundan kalmış dosyalar var; ama şimdi bir de şu "
-"disklere yazılmış GRUB 2 önyükleme kayıtları var:"
+"Bu sistemde hala GRUB Legacy kurulumundan kalmış dosyalar var; ama şimdi bir "
+"de şu disklere yazılmış GRUB 2 önyükleme kayıtları var:"
 
 #. Type: boolean
 #. Description
@@ -287,9 +285,9 @@ msgid ""
 "your system to stop booting properly."
 msgstr ""
 "Göründüğü kadarı ile eski GRUB kurulumu artık kullanılmıyor, dolayısıyla bu "
-"disklerdeki eski GRUB dosyalarını kaldırıp GRUB 2 görüntülerine yükseltme "
+"disklerdeki GRUB Legacy dosyalarını kaldırıp GRUB 2 görüntülerine yükseltme "
 "yaparak dönüşümü tamamlamalısınız. Eğer bu GRUB 2 görüntülerini "
-"yükseltmezseniz, yeni paketlerle uyum sorunları yaşanabilir ve bu durum "
+"yükseltmezseniz, yeni paketlerle uyum sorunları yaşayabilirler ve bu durum "
 "sisteminizin düzgün bir biçimde başlamasına engel olabilir."
 
 #. Type: boolean
@@ -300,7 +298,8 @@ msgid ""
 "records were created by a GRUB 2 installation on some other operating system."
 msgstr ""
 "Bu önyükleme kayıtları başka bir işletim sistemindeki bir GRUB 2 kurulumu "
-"tarafından oluşturulmamışsa GRUB 2 kurulumunu tamamlamanız gerekmektedir."
+"tarafından oluşturulmamışsa,\n"
+" GRUB 2 kurulumunu tamamlamanız gerekmektedir."
 
 #. Type: string
 #. Description
@@ -316,9 +315,10 @@ msgid ""
 "`kopt' parameter in GRUB Legacy's menu.lst. Please verify that it is "
 "correct, and modify it if necessary. The command line is allowed to be empty."
 msgstr ""
-"Aşağıdaki Linux komut satırı /etc/default/grub'dan ya da eski GRUB menu.lst "
-"dosyasındaki 'kopt' parametresinden alınmıştır. Lütfen doğruluğundan emin "
-"olun ve gerekirse düzeltin. Komut satırı boş bırakılabilir."
+"Aşağıdaki Linux komut satırı /etc/default/grub dosyasından ya da GRUB Legacy "
+"menu.lst dosyasındaki 'kopt' parametresinden alınmıştır. Lütfen "
+"doğruluğundan emin olun ve gerekirse değiştirin. Komut satırı boş "
+"bırakılabilir."
 
 #. Type: string
 #. Description
@@ -333,14 +333,14 @@ msgid ""
 "The following string will be used as Linux parameters for the default menu "
 "entry but not for the recovery mode."
 msgstr ""
-"Aşağıdaki dizgi öntanımlı menü girişinin Linux parametreleri olarak "
+"Aşağıdaki dizgi öntanımlı menü öğesinin Linux parametreleri olarak "
 "kullanılacak; fakat kurtarma kipi için kullanılmayacaktır."
 
 #. Type: boolean
 #. Description
 #: ../templates.in:3001
 msgid "Force extra installation to the EFI removable media path?"
-msgstr "EFI taşınabilir ortam yoluna fazladan bir kurulum yapılsın mı?"
+msgstr "EFI taşınabilir ortam yoluna ek bir kurulum zorlansın mı?"
 
 #. Type: boolean
 #. Description
@@ -355,13 +355,13 @@ msgid ""
 "OS installations correctly."
 msgstr ""
 "Bazı EFI tabanlı sistemler hatalı olduklarından yeni önyükleyicileri olması "
-"gerektiği gibi yönetemeyebilirler. Buna rağmen GRUB'un fazladan bir "
-"kopyasının EFI taşınabilir ortam yoluna kurulmasını zorlamanız, Debian'ın "
-"düzgün bir biçimde başlamasını sağlayacaktır. Öte yandan bu durum aynı ortam "
-"yoluna bağlı başka işletim sistemleri varsa, onların önyüklenebilirliğini "
-"ortadan kaldırabilir. Böyle bir durumda, GRUB'un diğer işletim sistemlerini "
-"de düzgün bir biçimde başlatabilecek şekilde başarı ile yapılandırıldığından "
-"emin olmalısınız."
+"gerektiği gibi yönetmezler. EFI taşınabilir ortam yoluna ek bir GRUB "
+"kurulumu yapılmasını zorlarsanız, bu yaklaşımınız söz konusu soruna rağmen "
+"sisteminizin Debian'ı düzgün bir biçimde başlamasını sağlayacaktır. Öte "
+"yandan bu durum aynı ortam yoluna bağlı başka işletim sistemleri varsa, "
+"onların önyüklenebilirliğini ortadan kaldırabilir. Böyleyse, GRUB'un diğer "
+"işletim sistemlerini de düzgün bir biçimde başlatabilecek şekilde başarı ile "
+"yapılandırıldığından emin olmalısınız."
 
 #. Type: boolean
 #. Description
@@ -379,75 +379,78 @@ msgid ""
 "your NVRAM variables have been set up such that your system contacts a PXE "
 "server on every boot, this would preserve that behavior."
 msgstr ""
-"GRUB, platform NVRAM değişkenlerini, bilgisayarınız açıldığında otomatik "
-"olarak Debian'ı başlatacak şekilde yapılandırılabilir. Bu davranışı devre "
-"dışı bırakarak önyükleme yapılandırmasında herhangi bir değişiklik "
-"yapılmamasını sağlayabilirsiniz. Bu durumda, örneğin NVRAM değişkenleri her "
-"açılışta PXE sunucuları ile iletişim kuracak şekilde ayarlanmışsa bu "
-"davranış aynı şekilde devam edecektir."
+"GRUB, NVRAM değişkenlerini sisteminiz açıldığında otomatikman Debian'ı "
+"başlatacak şekilde yapılandırılabilir. Fakat bu davranışı devre dışı "
+"bırakıp, önyükleme yapılandırmasında herhangi bir değişiklik yapılmamasını "
+"yeğleyebilirsiniz. Bu durumda, örneğin NVRAM değişkenleri sisteminiz her "
+"açılışta bir PXE sunucusu ile iletişim kuracak şekilde ayarlanmışsa bu "
+"davranış aynı şekilde sürecektir."
+
+#. Type: boolean
+#. Description
+#: ../templates.in:5001
+msgid "Run os-prober automatically to detect and boot other OSes?"
+msgstr ""
+"os-prober diğer işletim sistemlerini otomatikman bulmak ve önyüklemek için "
+"çalıştırılsın mı?"
+
+#. Type: boolean
+#. Description
+#: ../templates.in:5001
+msgid ""
+"GRUB can use the os-prober tool to attempt to detect other operating systems "
+"on your computer and add them to its list of boot options automatically."
+msgstr ""
+"GRUB, bilgisayarınızdaki diğer işletim sistemlerini algılamak ve onları "
+"önyükleme seçenekleri listesine eklemek için os-prober programını "
+"kullanabilir."
+
+#. Type: boolean
+#. Description
+#: ../templates.in:5001
+msgid ""
+"If your computer has multiple operating systems installed, then this is "
+"probably what you want. However, if your computer is a host for guest OSes "
+"installed via LVM or raw disk devices, running os-prober can cause damage to "
+"those guest OSes as it mounts filesystems to look for things."
+msgstr ""
+"Eğer bilgisayarınızda birden fazla işletim sistemi kurulu ise, büyük "
+"olasılıkla bunu istersiniz. Fakat bilgisayarınız LVM ya da ham disk "
+"aygıtları ile kurulmuş konuk işletim sistemleri için bir ev sahibi ise, os-"
+"prober bir şeylere bakmak için dosya sistemlerini bağladığı için onu "
+"çalıştımak bu konuk işletim sistemlerine zarar verebilir."
 
 #. Type: string
 #. Description
-#: ../templates.in:5001
+#: ../templates.in:6001
 msgid "kFreeBSD command line:"
 msgstr "kFreeBSD komut satırı:"
 
 #. Type: string
 #. Description
-#: ../templates.in:5001
+#: ../templates.in:6001
 msgid ""
 "The following kFreeBSD command line was extracted from /etc/default/grub or "
 "the `kopt' parameter in GRUB Legacy's menu.lst. Please verify that it is "
 "correct, and modify it if necessary. The command line is allowed to be empty."
 msgstr ""
-"Aşağıdaki kFreeBSD komut satırı /etc/default/grub'dan ya da eski GRUB menu."
-"lst dosyasındaki 'kopt' parametresinden alınmıştır. Lütfen doğruluğundan "
-"emin olun ve gerekirse düzeltin. Komut satırı boş bırakılabilir."
+"Aşağıdaki kFreeBSD komut satırı /etc/default/grub dosyasından ya da GRUB "
+"Legacy menu.lst dosyasındaki 'kopt' parametresinden alınmıştır. Lütfen "
+"doğruluğundan emin olun ve gerekirse değiştirin. Komut satırı boş "
+"bırakılabilir."
 
 #. Type: string
 #. Description
-#: ../templates.in:6001
+#: ../templates.in:7001
 msgid "kFreeBSD default command line:"
 msgstr "Öntanımlı kFreeBSD komut satırı:"
 
 #. Type: string
 #. Description
-#: ../templates.in:6001
+#: ../templates.in:7001
 msgid ""
 "The following string will be used as kFreeBSD parameters for the default "
 "menu entry but not for the recovery mode."
 msgstr ""
-"Aşağıdaki dizgi öntanımlı menü girişinin kFreeBSD parametreleri olarak "
+"Aşağıdaki dizgi öntanımlı menü öğesinin kFreeBSD parametreleri olarak "
 "kullanılacak; fakat kurtarma kipi için kullanılmayacaktır."
-
-#~ msgid "/boot/grub/device.map has been regenerated"
-#~ msgstr "/boot/grub/device.map dosyası yeniden oluşturuldu"
-
-#~ msgid ""
-#~ "The file /boot/grub/device.map has been rewritten to use stable device "
-#~ "names. In most cases, this should significantly reduce the need to change "
-#~ "it in future, and boot menu entries generated by GRUB should not be "
-#~ "affected."
-#~ msgstr ""
-#~ "/boot/grub/device.map dosyası kararlı aygıt isimlerini kullanacak şekilde "
-#~ "yeniden yazıldı. Bu işlem çoğu durumda ileride gerekebilecek bir "
-#~ "düzenleme gereksinimini ciddi biçimde azaltır ve GRUB tarafından "
-#~ "oluşturulan önyükleme menüsü seçeneklerini etkilemez."
-
-#~ msgid ""
-#~ "However, since more than one disk is present in the system, it is "
-#~ "possible that the system is depending on the old device map. Please check "
-#~ "whether there are any custom boot menu entries that rely on GRUB's (hdN) "
-#~ "drive numbering, and update them if necessary."
-#~ msgstr ""
-#~ "Öte yandan sistemde birden fazla disk olduğu için, sistemin eski aygıt "
-#~ "eşlemine bağlı kalmış olması olasıdır. GRUB'un (hdN) sürücü "
-#~ "numaralandırmasını kullanan herhangi bir özel önyükleme menüsü seçeneği "
-#~ "olup olmadığını denetleyin ve gerekirse bunları güncelleyin."
-
-#~ msgid ""
-#~ "If you do not understand this message, or if there are no custom boot "
-#~ "menu entries, you can ignore this message."
-#~ msgstr ""
-#~ "Bu uyarıyı anlayamadıysanız veya herhangi bir özel önyükleme menüsü "
-#~ "seçeneği yok ise, bu uyarıyı gözardı edebilirsiniz."
